assets/css/style.css
/* ... */
::-webkit-input-placeholder {
	font-family: 'Oswald', sans-serif;
   	text-transform: uppercase;
   	font-size: 12px;
   	font-weight: 400;
   	letter-spacing: 2px;
   	opacity:  1;
   	color: #b6b7b8;
}

:-moz-placeholder {
	font-family: 'Oswald', sans-serif;
   	text-transform: uppercase;
   	font-size: 12px;
   	font-weight: 400;
   	letter-spacing: 2px;
   	opacity:  1;
   	color: #b6b7b8;
}

::-moz-placeholder {
	font-family: 'Oswald', sans-serif;
   	text-transform: uppercase;
   	font-size: 12px;
   	font-weight: 400;
   	letter-spacing: 2px;
   	opacity:  1;
   	color: #b6b7b8;
}

:-ms-input-placeholder {
	font-family: 'Oswald', sans-serif;
   	text-transform: uppercase;
   	font-size: 12px;
   	font-weight: 400;
   	letter-spacing: 2px;
   	opacity:  1;
   	color: #b6b7b8;
}

::-ms-input-placeholder {
	font-family: 'Oswald', sans-serif;
   	text-transform: uppercase;
   	font-size: 12px;
   	font-weight: 400;
   	letter-spacing: 2px;
   	opacity:  1;
   	color: #b6b7b8;
}

::placeholder { 
   	font-family: 'Oswald', sans-serif;
   	text-transform: uppercase;
   	font-size: 12px;
   	font-weight: 400;
   	letter-spacing: 2px;
   	opacity:  1;
   	color: #b6b7b8;
}


/*--------------------------------------------------------------
3. Animsition preloader
--------------------------------------------------------------*/
body,
.animsition-overlay {
	overflow: hidden;
}

.animsition-overlay {
	z-index: 2;
}

/* 3.1. Animsition-overlay */
.animsition-overlay-slide {
  	background-color: transparent;
}

.loader:before,
.loader:after {
	content: '';
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	z-index: 99;
	background: #111517;
    -webkit-transition: 1s cubic-bezier(.858, .01, .068, .99); 
    	-o-transition: 1s cubic-bezier(.858, .01, .068, .99); 
			transition: 1s cubic-bezier(.858, .01, .068, .99);
}

.loader:before {
	left: 100%;
	-webkit-transform: translateX(-100%);
	    -ms-transform: translateX(-100%);
	        transform: translateX(-100%);
	visibility: visible;
}

.loader:after {
	left: -100%;
	-webkit-transform: translateX(0);
	    -ms-transform: translateX(0);
	        transform: translateX(0);
    visibility: hidden;
    -webkit-transition-delay: .5s;
        -o-transition-delay: .5s;
            transition-delay: .5s;
}

/* 3.2. Loading animation */
body.in {
	overflow: visible;
	overflow-x: hidden;
}

/*--------------------------------------------------------------
4. Header
--------------------------------------------------------------*/
.fixed-header {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	z-index: 10;
	width: 100%;
	height: auto;
}

.header-flex-box {
	width: 100%;
	display: -webkit-box;
		display: -ms-flexbox;
			display: flex;
	-webkit-box-pack: justify;
	    -ms-flex-pack: justify;
	        justify-content: space-between;
}

/* 4.1. Header logo */
.logo {
	width: 100px;
	margin: 20px 0 0 40px;
}

.logo-img-box {
	position: relative;
	overflow: hidden;
}

.logo img {
	-webkit-transform: translateY(110%);
	    -ms-transform: translateY(110%);
	        transform: translateY(110%);
	-webkit-transition: .5s cubic-bezier(.767, .01, .18, 1.01);
		-o-transition: .5s cubic-bezier(.767, .01, .18, 1.01);
			transition: .5s cubic-bezier(.767, .01, .18, 1.01);
}

body.active .logo img {
	-webkit-transform: translateY(0);
	    -ms-transform: translateY(0);
	        transform: translateY(0);
	-webkit-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
		-o-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
			transition: 1s cubic-bezier(.767, .01, .18, 1.01);
	-webkit-transition-delay: 1s;
	    -o-transition-delay: 1s;
	        transition-delay: 1s;
}

/* 4.2. Header menu-open */
.menu-open {
	width: 40px;
	height: 22px;
	margin: 20px 40px 0 0;
	-webkit-transform-origin: right;
	    -ms-transform-origin: right;
	        transform-origin: right;
	-webkit-transform: scaleX(0);
	    -ms-transform: scaleX(0);
	        transform: scaleX(0);
	-webkit-transition: .5s cubic-bezier(.767, .01, .18, 1.01);
		-o-transition: .5s cubic-bezier(.767, .01, .18, 1.01);
			transition: .5s cubic-bezier(.767, .01, .18, 1.01);
}

body.active .menu-open {
	-webkit-transform: scaleX(1);
	    -ms-transform: scaleX(1);
	        transform: scaleX(1);
	-webkit-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
		-o-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
			transition: 1s cubic-bezier(.767, .01, .18, 1.01);
	-webkit-transition-delay: 1s;
	     -o-transition-delay: 1s;
	        transition-delay: 1s;
}

.menu-open:before {
	content: '';
	position: absolute;
	width: 40px;
	height: 2px;
	left: 0;
	top: 50%;
	-webkit-transform-origin: right;
	    -ms-transform-origin: right;
	        transform-origin: right;
	-webkit-transform: translateY(-50%) scaleX(0);
	    -ms-transform: translateY(-50%) scaleX(0);
	        transform: translateY(-50%) scaleX(0);
	-webkit-transition: .4s cubic-bezier(.767, .01, .18, 1.01);
		-o-transition: .4s cubic-bezier(.767, .01, .18, 1.01);
			transition: .4s cubic-bezier(.767, .01, .18, 1.01);
}

body.active .menu-open:before {
	-webkit-transform: translateY(-50%) scaleX(1);
	    -ms-transform: translateY(-50%) scaleX(1);
	        transform: translateY(-50%) scaleX(1);	
	-webkit-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
		-o-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
			transition: 1s cubic-bezier(.767, .01, .18, 1.01);
	-webkit-transition-delay: 1.1s;
	     -o-transition-delay: 1.1s;
	        transition-delay: 1.1s;		
}

.hamburger:before, 
.hamburger:after {
	content: '';
	position: absolute;
	width: 40px;
	height: 2px;
	-webkit-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
		-o-transition: 1s cubic-bezier(.767, .01, .18, 1.01);
			transition: 1s cubic-bezier(.767, .01, .18, 1.01);
	left: 0;
	top: 0;
	-webkit-transition-delay: 1.3s;
	    -o-transition-delay: 1.3s;
	        transition-delay: 1.3s;
}

.hamburger:after {
	top: auto;
	bottom: 0;
}
/* ... */

